# Tropic-Engine

./: CMakeLists.txt  README.md
.gitea/workflows/: build.yml
assets/levels/: test_level.json
assets/shaders/: platform_normals.frag
docs/wiki/: Engine-API.md  Home.md  Level-Format.md
inc/: camera.h  engine_test.h  handles.h  id_manager.h  input.h  level_loader.h  level_parser.h  mesh.h  object.h  primitives.h  scene.h  shader.h  texture.h  tropic.h  tropic_datatypes.h  tropic_gamestate.h  utils.h
inc/glad/: glad.h
levels/: level.json
src/: camera.c  engine_test.c  glad.c  id_manager.c  level_loader.c  level_parser.c  object.c  scene.c  shader.c  tropic.c  utils.c
tests/: CMakeLists.txt  engine_test.c  engine_test.h  level_loader.c  level_loader.h
